# advent-of-code

./: .gitignore
2020/: .gitignore
2020/aoc-finish/: finish.html
2020/aoc-util/: Cargo.toml
2020/aoc-util/src/: lib.rs  map.rs
2020/d1/a/: Cargo.toml
2020/d1/a/src/: main.rs  original.rs
2020/d10/a/src/: main.rs
2020/d11/src/: main.rs
2020/d12/src/: main.rs
2020/d13/: mini
2020/d13/src/: main.rs
2020/d14/src/: main.rs
2020/d15/src/: main.rs
2020/d16/src/: main.rs
2020/d17/a/src/: main.rs
2020/d17/src/: main.rs
2020/d18/a/src/: main.rs
2020/d18/src/: main.rs
2020/d19/a/src/: main.rs
2020/d19/src/: main.rs
2020/d2/a/src/: main.rs
2020/d20/src/: main.rs
2020/d21/src/: main.rs
2020/d22/src/: main.rs
2020/d23/src/: main.rs
2020/d24/src/: main.rs
2020/d25/: Cargo.toml
2020/d25/src/: main.rs
2020/d3/a/: Cargo.toml
2020/d3/a/src/: main.rs
2020/d4/a/src/: main.rs
2020/d5/a/src/: main.rs
2020/d6/a/: Cargo.toml
2020/d6/a/src/: main.rs
2020/d7/a/src/: main.rs
2020/d8/a/src/: main.rs
2020/d9/a/src/: main.rs
2021/aoc-finish/: finish.html
2021/aoc-util/: Cargo.toml
2021/aoc-util/src/: lib.rs  map.rs
2021/d1/src/: main.rs
2021/d10/src/: main.rs
2021/d11/src/: main.rs
2021/d12/src/: main.rs
2021/d13/src/: main.rs
2021/d14/src/: main.rs
2021/d15/: Cargo.toml
2021/d15/src/: main.rs
2021/d16/src/: main.rs
2021/d17/: Cargo.toml
2021/d17/src/: main.rs
2021/d18/src/: main.rs
2021/d19/src/: main.rs
2021/d2/src/: main.rs
2021/d20/: Cargo.toml
2021/d20/src/: main.rs
2021/d21/src/: main.rs
2021/d22/: Cargo.toml
2021/d22/src/: main.rs
2021/d23/: Cargo.toml
2021/d23/src/: main.rs
2021/d24/: Cargo.toml  notes  notes2
2021/d24/src/: main.rs
2021/d25/src/: main.rs
2021/d3/src/: main.rs
2021/d4/src/: main.rs
2021/d5/src/: main.rs
2021/d6/src/: main.rs
2021/d7/src/: main.rs
2021/d8/: notes
2021/d8/src/: main.rs
2021/d9/src/: main.rs
2022/aoc-util/: Cargo.toml
2022/aoc-util/src/: autofetch.rs  lib.rs  map.rs  term.rs  text.rs  to_tuple.rs
2022/d1/src/: main.rs
2022/d2/src/: main.rs
2022/d3/src/: main.rs
2022/d4/src/: main.rs
2022/d5/: test-b
2022/d5/src/: main.rs
2022/d6/: Cargo.toml
2022/d6/src/: main.rs
2022/d7/src/: main.rs
