[package]
name = "aoc-util"
version = "0.1.0"
authors = ["Roy Wellington Ⅳ <cactus_hugged@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
regex = "1.5.4"
structopt = "0.3.21"
thiserror = "1.0.30"
