[package]
name = "aoc-util"
version = "0.1.0"
authors = ["Roy Wellington Ⅳ <cactus_hugged@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
once_cell = "1.8.0"
regex = "1.5.4"
reqwest = "0.11.13"
structopt = "0.3.21"
tokio = {version = "1.22.0", features = ["rt-multi-thread"]}
thiserror = "1.0.30"
